[tool.poetry]
name = "moment-research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.20.0"
einops = "^0.8.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
huggingface-hub = "^0.23.4"
matplotlib = "^3.9.1"
notebook = "^7.2.1"
numpy = "^1.17.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
statsforecast = "^1.7.5"
statsmodels = "^0.14.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
transformers = "^4.42.3"
wandb = "^0.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
